scss: update organization dropdown styles, fix dark mode issue and remove unnecessary carot
^fox-59240

--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -153,7 +153,7 @@ app-vault {
                 ul {
                     margin-left: 0;
                     li {
-                        padding: 5px;
+                        padding: 5px 10px;
                         &:hover {
                             background-color: $table-hover-bg;
                         }
